[FIX] doors z-index value fixed

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 }
 .puerta_izq{
     width: 100%;
-    z-index: -1;
+    z-index: 1;
     align-self: stretch;
     animation: abrir_puerta 5s infinite;
 }
@@ -45,7 +45,7 @@
     position: relative;
     left: -200%;
     width: 100%;
-    z-index: -1;
+    z-index: 1;
     align-self: stretch;
     animation: cerrar_puerta 5s infinite;
 }
